// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Message page render should render the initial state of the page 1`] = `
<base-page-stub>
  <template>
    
    Message
  
  </template>
   
  <div
    class="tabs"
  >
    <ul>
      <li
        class="is-active"
      >
        <a
          data-test="sign-message-tab"
        >
          
          Sign
        
        </a>
      </li>
       
      <li
        class=""
      >
        <a
          data-test="verify-message-tab"
        >
          
          Verify
        
        </a>
      </li>
    </ul>
  </div>
   
  <sign-message-stub />
   
  <verify-message-stub
    style="display: none;"
  />
</base-page-stub>
`;

exports[`Message page render should set Sign tab 1`] = `
<base-page-stub>
  <template>
    
    Message
  
  </template>
   
  <div
    class="tabs"
  >
    <ul>
      <li
        class="is-active"
      >
        <a
          data-test="sign-message-tab"
        >
          
          Sign
        
        </a>
      </li>
       
      <li
        class=""
      >
        <a
          data-test="verify-message-tab"
        >
          
          Verify
        
        </a>
      </li>
    </ul>
  </div>
   
  <sign-message-stub />
   
  <verify-message-stub
    style="display: none;"
  />
</base-page-stub>
`;

exports[`Message page render should set Verify tab 1`] = `
<base-page-stub>
  <template>
    
    Message
  
  </template>
   
  <div
    class="tabs"
  >
    <ul>
      <li
        class=""
      >
        <a
          data-test="sign-message-tab"
        >
          
          Sign
        
        </a>
      </li>
       
      <li
        class="is-active"
      >
        <a
          data-test="verify-message-tab"
        >
          
          Verify
        
        </a>
      </li>
    </ul>
  </div>
   
  <sign-message-stub
    style="display: none;"
  />
   
  <verify-message-stub
    style=""
  />
</base-page-stub>
`;
